# django-project-template

./: .env  LICENSE  README.md  compose.yml  gitignore  pyproject.toml  requirements.txt
project/config/: settings.py  urls.py
project/home/: views.py
project/home/templates/home/: home.html
project/theme/: apps.py
project/theme/templates/: base.html
